Fix issues with educational fields partial

--- a/app/views/surveys/_educational_fields.html.erb
+++ b/app/views/surveys/_educational_fields.html.erb
@@ -12,7 +12,7 @@
   <div class="field">
     <%= render partial: 'form_elements/collection_buttons',
       locals: {
-        form: f,
+        form: form,
         type: "radio",
         class: "inline",
         title: "Default language",
@@ -33,10 +33,10 @@
   <div class="field">
     <%= render partial: 'form_elements/collection_buttons',
     locals: {
-      form: f,
+      form: form,
       type: "radio",
       title: "Participants' level of study",
-      description: "What is the level of study of your survey group or class?"
+      description: "What is the level of study of your survey group or class?",
       rb_config: ['[settings][participant_level_of_study]', surveys_data("participant_level_of_study"), :first, :last]
     } %>
   </div>
@@ -44,11 +44,11 @@
   <div class="field">
     <%= render partial: 'form_elements/collection_buttons',
       locals: {
-        form: f,
+        form: form,
         type: "radio",
         option_class: "two-col",
         title: "Participants' specialism",
-        description: "What is the level of study of your survey group or class?"
+        description: "Lorem ipsum",
         rb_config: ['[settings][participant_specialism]', surveys_data("participant_specialism"), :first, :last]
       } %>
   </div>
@@ -86,11 +86,11 @@
   <div class="field">
     <%= render partial: 'form_elements/collection_buttons',
       locals: {
-        form: f,
+        form: form,
         type: "radio",
         option_class: "inline",
         title: "Follow up session?",
-        description: "What is the level of study of your survey group or class?"
+        description: "Lorem ipsum",
         rb_config: ['[settings][follow_up_session]', surveys_data("follow_up_session"), :first, :last]
       } %>
   </div>
