increase multiselect height

--- a/app/assets/stylesheets/components/form/_form.scss
+++ b/app/assets/stylesheets/components/form/_form.scss
@@ -84,6 +84,10 @@ select {
   max-width: rem-calc(400);
 
   @include breakpoint($medium) { font-size: rem-calc(16); }
+
+  &.multiple-select {
+    height: rem-calc(150);
+  }
 }
 
 textarea {
