remove classification from results chart and fix stlying in ie

--- a/app/assets/stylesheets/components-vue/chart.scss
+++ b/app/assets/stylesheets/components-vue/chart.scss
@@ -7,6 +7,6 @@
 // results chart
 //--------------------------------------------------
   &--results {
-    width: rem-calc(600);
+    width: 600px; height: 330px;
   }
 }
