--- a/app/views/responses/results.html.erb
+++ b/app/views/responses/results.html.erb
@@ -12,17 +12,9 @@
 <div class="container--medium content-padding">
 
   <div class="box--grey-light flex">
-    <div class="flex-2-thirds">
-      <chart-results :data="<%= @results_chart_data %>"></chart-results>
+    <chart-results :data="<%= @results_chart_data %>"></chart-results>
 
-      <p>
-        <strong>classification:</strong>
-        <%= @response.classification.name %>
-         (To Be Determined)
-      </p>
-    </div>
-
-    <div class="flex-1-third">
+    <div class="results__filters block--results">
       <h2>Filter results by</h2>
       <div>
         Filters go here
