--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -33,7 +33,7 @@
                   <i class="material-icons">mode_edit</i>Edit
                 <% end %>
 
-                <popup icon="share" title="Share" url="<%= new_survey_response_path(survey) %>"></popup>
+                <popup icon="share" title="Share" url="<%= new_survey_response_url(survey) %>"></popup>
 
                 <%= link_to survey_responses_path(survey), title: 'View survey results', class: 'button--large-chevrons' do %>
                    Responses<i class="material-icons">chevron_right</i><i class="material-icons">chevron_right</i>
