--- a/app/views/surveys/_option_fields.html.erb
+++ b/app/views/surveys/_option_fields.html.erb
@@ -1,4 +1,4 @@
-<div class="nested-fields">
+<div class="customised-question__option nested-fields">
   <div class="field">
     <p>
       <%= f.label :text, "Option Text" %>
