--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -72,7 +72,7 @@
       <%= render partial: 'surveys/customised_question_fields', locals: { f: customised_questions_form } %>
     <% end %>
 
-    <%= link_to_add_association 'Add Custom Question', form, :customised_questions, {class: "add-customised_question"} %>
+    <%= link_to_add_association 'Add Custom Question', form, :customised_questions, {class: "add-customised-question"} %>
   </div>
 
 
