hide new question links and touch up styling

--- a/app/assets/stylesheets/components/_table.scss
+++ b/app/assets/stylesheets/components/_table.scss
@@ -35,6 +35,10 @@
 
     &__icon { color: $grey; }
 
+    &__cell--padding-small {
+      padding: rem-calc(5);
+    }
+
   &--surveys {
     @extend %table;
 
