--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -35,7 +35,7 @@
               <p class="table__heading-3"><%= user.email %></p>
 
               <p class="table__buttons flex flex-v-center">
-                <%= link_to admin_user_path(user), method: :delete, data: { confirm: 'Are you sure you want to permanently delete this user?' }, title: 'Delete result', class: 'button--delete flex flex-v-center' do %>
+                <%= link_to admin_user_path(user), method: :delete, data: { confirm: 'Are you sure you want to permanently delete this user?' }, title: 'Delete user', class: 'button--delete flex flex-v-center' do %>
                   <i class="material-icons">delete</i>
                 <% end %>
 
