--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Question</h1>
+<div class="container--small content-padding">
+  <h1>Editing Question</h1>
 
-<%= render 'form', question: @question %>
+  <%= render 'form', question: @question %>
 
-<%= link_to 'Show', @question %> |
-<%= link_to 'Back', questions_path %>
+  <%= link_to 'Show', @question %> |
+  <%= link_to 'Back', questions_path %>
+</div>
