--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Question</h1>
+<div class="container--small content-padding">
+  <h1>New Question</h1>
 
-<%= render 'form', question: @question %>
+  <%= render 'form', question: @question %>
 
-<%= link_to 'Back', questions_path %>
+  <%= link_to 'Back', questions_path %>
+</div>
