--- a/app/views/demographic_questions/edit.html.erb
+++ b/app/views/demographic_questions/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Demographic Question</h1>
+<div class="container--small content-padding">
+  <h1>Editing Demographic Question</h1>
 
-<%= render 'form', demographic_question: @demographic_question %>
+  <%= render 'form', demographic_question: @demographic_question %>
 
-<%= link_to 'Show', @demographic_question %> |
-<%= link_to 'Back', demographic_questions_path %>
+  <%= link_to 'Show', @demographic_question %> |
+  <%= link_to 'Back', demographic_questions_path %>
+</div>
