--- a/app/views/demographic_questions/new.html.erb
+++ b/app/views/demographic_questions/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Demographic Question</h1>
+<div class="container--small content-padding">
+  <h1>New Demographic Question</h1>
 
-<%= render 'form', demographic_question: @demographic_question %>
+  <%= render 'form', demographic_question: @demographic_question %>
 
-<%= link_to 'Back', demographic_questions_path %>
+  <%= link_to 'Back', demographic_questions_path %>
+</div>
