auto-size svg and remove filters

--- a/app/views/responses/results.html.erb
+++ b/app/views/responses/results.html.erb
@@ -11,15 +11,8 @@
 
 <div class="container--medium content-padding">
 
-  <div class="box--grey-light flex">
+  <div class="box--grey-light">
     <chart-results :data="<%= @results_chart_data %>"></chart-results>
-
-    <div class="results__filters block--results">
-      <h2>Filter results by</h2>
-      <div>
-        Filters go here
-      </div>
-    </div>
   </div>
 
   <div class="flex">
