--- a/app/assets/stylesheets/components-vue/chart.scss
+++ b/app/assets/stylesheets/components-vue/chart.scss
@@ -6,7 +6,15 @@
 //--------------------------------------------------
 // results chart
 //--------------------------------------------------
-  &--results {
-    width: 600px; height: 330px;
+  &__container {
+    width: 100%; height: 0;
+
+    position: relative;
+  }
+
+  &__svg {
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 }
