--- a/app/views/admin/responses/index.html.erb
+++ b/app/views/admin/responses/index.html.erb
@@ -17,7 +17,7 @@
       <p class="table__heading table__heading-1">ID</p>
       <p class="table__heading table__heading-2">Score</p>
       <p class="table__heading table__heading-3">Created on</p>
-      <p class="table__heading table__heading-4">Organisation</p>
+      <p class="table__heading table__heading-4">Survey title</p>
     </li>
 
     <% @responses.each do |response| %>
@@ -25,7 +25,7 @@
         <p class="table__heading-1"><%= response.id %></p>
         <p class="table__heading-2">F1: <%= response.f1_score %>, F2: <%= response.f2_score %>, F3: <%= response.f3_score %></p>
         <p class="table__heading-3"><%= response.created_at.strftime("%d/%m/%y") %></p>
-        <p class="table__heading-4"><%= response.survey.user.organisation_name %></p>
+        <p class="table__heading-4"><%= response.survey.name %></p>
 
         <p class="table__buttons flex flex-v-center">
           <%= link_to survey_response_path(response.survey, response), method: :delete, data: { confirm: 'Are you sure?' }, title: 'Delete result', class: 'button--delete flex flex-v-center' do %>
