--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<%= render 'global/sign_up_warning' %>
 <div class="content-padding--large container--small">
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), data: {prevent_default_enter: true}) do |f| %>
@@ -70,12 +71,12 @@
         </div>
         <div class="field">
           <%= render partial: 'form_elements/collection_buttons',
-            locals: { 
+            locals: {
               form: f,
               type: "radio",
               option_class: "inline",
               title: "Is your organisation part of a wider network or structure?",
-              rb_config: [:wider_network, User.wider_network_types, :first, :first] 
+              rb_config: [:wider_network, User.wider_network_types, :first, :first]
             } %>
           <p>Please give details</p>
           <%= f.text_area :wider_network_details %>
