add legend to chart

--- a/app/assets/stylesheets/components-vue/chart.scss
+++ b/app/assets/stylesheets/components-vue/chart.scss
@@ -7,14 +7,32 @@
 // results chart
 //--------------------------------------------------
   &__container {
+    margin-bottom: rem-calc(20);
     width: 100%; height: 0;
 
     position: relative;
   }
 
-  &__svg {
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
+    &__svg {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    &__legend {
+      margin-left: rem-calc(16);
+
+      @include breakpoint($small) {
+        margin-left: rem-calc(70);
+      }
+    }
+
+      &__legend-key {
+        margin-bottom: rem-calc(6);
+        font-size: rem-calc(12);
+
+        @include breakpoint($small) {
+          font-size: rem-calc(16);
+        }
+      }
 }
