--- a/app/assets/stylesheets/utilities/_variables.scss
+++ b/app/assets/stylesheets/utilities/_variables.scss
@@ -78,3 +78,5 @@ $large: $site-width;
 $gutter-small: rem-calc(11); 
 $gutter-medium: rem-calc(16);
 $gutter-large: rem-calc(24);
+
+$box-margin-left: rem-calc(36);
