Changed two->three on survey form for number of custom questions

--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -63,7 +63,7 @@
 
   <h4>Customised Questions</h4>
   <p>
-    A maximum of two customised questions can be added and up to ten options per customised question.
+    A maximum of three customised questions can be added and up to ten options per customised question.
   </p>
   <hr>
 
