Initial work to add ethics text to modals

--- a/app/views/global/_sign_up_warning.html.erb
+++ b/app/views/global/_sign_up_warning.html.erb
@@ -3,7 +3,7 @@
     <div class="logo--foc survey-warning__logo"></div>
     <h1 class="survey-warning__title"> <%= t('sign_up_warning.title') %> </h1>
     <div class="survey-warning__container--scroll custom-scroll">
-      <p class="survey-warning__description"> <%= t('sign_up_warning.description') %></p>
+      <p class="survey-warning__description"> <%= t('sign_up_warning.description').html_safe %></p>
     </div>
   </div>
 </simple-modal>
