new results text

--- a/app/views/responses/results.html.erb
+++ b/app/views/responses/results.html.erb
@@ -19,7 +19,7 @@
     <div class="flex-2-thirds">
       <div class="block--results">
         <h2><%= t('results.title1') %></h2>
-        <div><%= t('results.content1') %></div>
+        <div><%= t('results.content1').html_safe %></div>
       </div>
     </div>
 
