--- a/app/views/global_admin/_footer.html.erb
+++ b/app/views/global_admin/_footer.html.erb
@@ -5,7 +5,11 @@
       <ul class="nav--footer ul-unstyled flex flex-wrap">
         <li class="nav__li"><%= link_to 'Home', root_path, title: 'Future of Conservation', class: 'nav__a' %></li>
         <li class="nav__li"><%= link_to 'Support', admin_support_path, title: 'About the Debate', class: 'nav__a' %></li>
-        <li class="nav__li"><%= link_to 'Legal', admin_legal_path, title: 'Legal', class: 'nav__a' %></li>
+<%
+=begin%>
+ <li class="nav__li"><%= link_to 'Legal', admin_legal_path, title: 'Legal', class: 'nav__a' %></li> 
+<%
+=end%>
       </ul>
 
       <%= link_to '', root_path, title: 'Future of Conservation', class: 'logo--foc-white' %>
