--- a/app/views/responses/results.html.erb
+++ b/app/views/responses/results.html.erb
@@ -18,8 +18,8 @@
   <div class="results__content flex">
     <div class="flex-2-thirds">
       <div class="block--results">
-        <h2><%= t('results.title1') %></h2>
-        <div><%= t('results.content1').html_safe %></div>
+        <h2><%= t('results.title') %></h2>
+        <div><%= t('results.content').html_safe %></div>
       </div>
     </div>
 
