--- a/app/assets/stylesheets/utilities/_base.scss
+++ b/app/assets/stylesheets/utilities/_base.scss
@@ -84,6 +84,10 @@ a {
   &:hover { text-decoration: none; }
 }
 
+figcaption {
+  font-size: rem-calc(14);
+}
+
 //--------------------------------------------------
 // site structure
 //--------------------------------------------------
