change debate page title

--- a/app/views/static_pages/about_debate.html.erb
+++ b/app/views/static_pages/about_debate.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'static_page', locals: { title: 'About the Debate', page: 'about_debate' } %>
+<%= render partial: 'static_page', locals: { title: 'About the Future of Conservation Debate', page: 'about_debate' } %>
