--- a/app/assets/stylesheets/components-vue/_progress-bar.scss
+++ b/app/assets/stylesheets/components-vue/_progress-bar.scss
@@ -88,7 +88,9 @@ $marker-separation-medium: rem-calc(167);
   }
 
   &__icon {
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     margin-bottom: rem-calc(16);
     width: 100%; height: rem-calc(19);
 
