add about page content & remove footer from home page

--- a/app/assets/stylesheets/components/_block.scss
+++ b/app/assets/stylesheets/components/_block.scss
@@ -15,10 +15,20 @@
 // public
 //--------------------------------------------------
   &--public {
-    padding: rem-calc(45 0 55 0);
+    padding: rem-calc(30 0);
     text-align: center;
 
-    @include breakpoint($medium) { padding: rem-calc(80 0 120 0); }
+    @include breakpoint($medium) { padding: rem-calc(40 0); }
+
+    &:first-child {
+      padding-top: rem-calc(45);
+      @include breakpoint($medium) { padding-top: rem-calc(80); }
+    }
+
+    &:last-child {
+      padding-bottom: rem-calc(55);
+      @include breakpoint($medium) { padding-bottom: rem-calc(120); }
+    }
 
     h2 { 
       @include breakpoint($medium) { 
