--- a/app/assets/stylesheets/components/_static-page.scss
+++ b/app/assets/stylesheets/components/_static-page.scss
@@ -3,7 +3,7 @@
     width: 100%;
   }
 
-  ul {
+  &__bibliography-list {
     font-size: rem-calc(14);
     list-style-type: none;
     padding: 0;
