--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -12,26 +12,26 @@
 </header>
 
 <div class="gutters">
+  <div class="block--public container--public-small">
+    <%= image_tag 'logos/logo-foc-circle.svg', alt: 'Future of Conservation logo', class: "block__icon-foc" %>
+
+    <h2><%= t('homepage.intro.title') %></h2>
+    <%= t('homepage.intro.content').html_safe %>
+
+    <%= link_to 'Take the survey', new_survey_response_path(Survey.master_survey), class: 'button--blue-shadow hero__button' %>
+
+    <p><%= t('homepage.intro.ethics_statement').html_safe %></p>
+  </div>
+
+  <% t('homepage.blocks').each do |block| %>
     <div class="block--public container--public-small">
-      <%= image_tag 'logos/logo-foc-circle.svg', alt: 'Icon', class: "block__icon-foc" %>
-
-      <h2>The Future of Conservation Survey</h2>
-      <p>There have long been debates regarding the future direction of biodiversity conservation, but these have tended to be dominated by a few powerful individuals. This survey allows you to contribute your views, so that a broader range of voices can be taken into account. It will take just 15 minutes to complete, and at the end you will be presented with a graphical representation of your views and how they compare to others who have taken the survey. We hope that you enjoy the survey and encourage you to share your experience by asking others to take part! Your responses will be kept anonymous, stored securely and will only be used for this project. See full details of ethics and data security.</p>
-
-      <%= link_to 'Take the survey', new_survey_response_path(Survey.master_survey), class: 'button--blue-shadow hero__button' %>
-    </div>
-
-  <% t('homepage').each do |block| %>
-    <div class="block--public container--public-small">
-      <%= image_tag block[:icon], alt: 'Icon', class: "block__icon-#{block[:class]}" %>
+      <% if block[:image] %>
+        <%= image_tag block[:image], alt: block[:image_alt], class: "block__icon-#{block[:image_class]}" %>
+      <% end %>
 
       <h2><%= block[:title] %></h2>
-      <p><%= block[:description] %></p>
-
-      <%= link_to 'Find out more', block[:url], title: "Find out more about #{block[:title]}", class: 'button--blue-shadow' %>
+      <p><%= block[:description].html_safe %></p>
     </div>
   <% end %>
 
 </div>
-
-<%= render 'global_public/cta' %>
