--- a/app/assets/stylesheets/utilities/_base.scss
+++ b/app/assets/stylesheets/utilities/_base.scss
@@ -84,6 +84,11 @@ a {
   &:hover { text-decoration: none; }
 }
 
+figure {
+  margin: 0;
+  @include breakpoint($medium) { padding: rem-calc(20 40) }
+}
+
 figcaption {
   font-size: rem-calc(14);
 }
