add funder logos

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -11,6 +11,9 @@
 //--------------------------------------------------
 .footer {
   
+  &__funder-logos {
+    margin-right: auto;
+  }
 
 //--------------------------------------------------
 // footer - admin
