--- a/app/views/global_public/_footer.html.erb
+++ b/app/views/global_public/_footer.html.erb
@@ -11,7 +11,10 @@
           <li class="nav__li"><%= link_to 'Log in', new_user_session_path, title: 'Log in', class: 'nav__a' %></li>
         <% end %>
       </ul>
-
+      <div class="footer__funder-logos flex flex-v-center">
+        <span title='Economic & Social Research Council' class='logo--esrc'></span>
+        <span title='Cambridge Conservation Initiative' class='logo--cci'></span>
+      </div>
       <%= link_to '', root_path, title: 'Future of Conservation', class: 'logo--foc-white' %>
     </div>
 
