--- a/app/views/global_admin/_footer.html.erb
+++ b/app/views/global_admin/_footer.html.erb
@@ -1,17 +1,20 @@
-<footer class="footer--public flex flex-v-center">
-  <div class="container--public">
-
-    <div class="footer__content flex flex-v-center flex-h-between">
+<footer>
+  <div class="footer--primary">
+    <div class="container--public footer__content flex flex-v-center flex-h-between">
       <ul class="nav--footer ul-unstyled flex flex-wrap">
         <li class="nav__li"><%= link_to 'Home', root_path, title: 'Future of Conservation', class: 'nav__a' %></li>
         <li class="nav__li"><%= link_to 'Support', admin_support_path, title: 'About the Debate', class: 'nav__a' %></li>
         <!--li class="nav__li"><%#= link_to 'Legal', admin_legal_path, title: 'Legal', class: 'nav__a' %></li-->
       </ul>
-
-      <%= render 'global/footer_logos'%>
+      <%= link_to '', root_path, title: 'Future of Conservation', class: 'logo--foc-white' %>
     </div>
-
-    <p class="footer__copyright no-margin">&copy; Copyright <%= Date.today.year %> GoFox</p>
-
   </div>
+
+  <div class="footer--secondary">
+    <div class="container--public footer__content flex flex-v-center flex-h-between">
+      <p class="footer__copyright no-margin">&copy; Copyright <%= Date.today.year %></p>
+      <%= render 'global/funder_logos'%>
+    </div>
+  <div>
 </footer>
+
