--- a/app/assets/stylesheets/components/_logos.scss
+++ b/app/assets/stylesheets/components/_logos.scss
@@ -10,12 +10,18 @@
   &:not(:last-child) {
     margin-right: rem-calc(20);
   }
+
+  &--about {
+    background-position: center;
+    width: rem-calc(150);
+    margin: rem-calc(10 20);
+  }
 }
 
 %foc {
-  width: rem-calc(135); height: rem-calc(45);
+  width: rem-calc(135); height: rem-calc(44);
 
-  @include breakpoint($medium) { width: rem-calc(166); height: rem-calc(56); }
+  @include breakpoint($medium) { width: rem-calc(166); height: rem-calc(53); }
 }
 
 //--------------------------------------------------
@@ -34,6 +40,34 @@
     background-image:  image-url('logos/logo-esrc.svg');
     width: rem-calc(72); height: rem-calc(60);
     margin: rem-calc(10 0);
+  }
+
+  &--uoc {
+    @extend %logo;
+    @extend %logo--about;
+    background-image: image-url('logos/logo-uoc.svg');
+    height: rem-calc(43);
+  }
+
+  &--uoe {
+    @extend %logo;
+    @extend %logo--about;
+    background-image: image-url('logos/logo-uoe.svg');
+    height: rem-calc(35);
+  }
+
+  &--uol {
+    @extend %logo;
+    @extend %logo--about;
+    background-image: image-url('logos/logo-uol.svg');
+    height:rem-calc(42);
+  }
+
+  &--unepwcmc {
+    @extend %logo;
+    @extend %logo--about;
+    background-image: url('https://s3.amazonaws.com/wcmc.logo/UNEP_WCMC_logo.svg');
+    height: rem-calc(34);
   }
 
   &--foc {
