--- a/app/assets/stylesheets/components/_static-page.scss
+++ b/app/assets/stylesheets/components/_static-page.scss
@@ -3,6 +3,11 @@
     width: 100%;
   }
 
+  &__logo-banner {
+    margin-top: rem-calc(40);
+    justify-content: center;
+  }
+
   &__bibliography-list {
     font-size: rem-calc(14);
     list-style-type: none;
