--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <% if Rails.env == 'production' %>
+      <%= render 'shared/google_analytics' %>
+    <% end %>
+    
     <title>The Future of Conservation</title>
     <%= csrf_meta_tags %>
     <meta content='width=device-width,initial-scale=1.0' name='viewport'>
