--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -23,8 +23,9 @@
 
   <%= link_to "Take the survey", new_survey_response_path(@survey), class: 'button' %>
   <%= link_to 'Edit', edit_survey_path(@survey), class: 'button' %>
-  <%= render partial: "surveys/export_form", locals: { survey: @survey } %>
-
+  <p>
+    <popup icon="share" title="Share" url="<%= new_survey_response_url(@survey) %>"></popup>
+  </p>
   <hr>
 
   <%= render partial: "surveys/customised_questions_table", locals: { survey: @survey } %>
