--- a/app/views/admin/dashboard/resources.html.erb
+++ b/app/views/admin/dashboard/resources.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  About Go-Fox
+  Resources
 <% end %>
 
 <div class="container content-padding">
@@ -7,7 +7,7 @@
     <div class="flex-4-fiths">
       <div class="box--grey-light">
         <div class="flex-4-fiths gutters content-padding--public">
-          <% t('about_project').each do |item| %>
+          <% t('resources').each do |item| %>
             <div class="block--about">
               <h2><%= item[:title] %></h2>
 
