--- a/app/views/admin/dashboard/support.html.erb
+++ b/app/views/admin/dashboard/support.html.erb
@@ -7,7 +7,7 @@
     <div class="flex-4-fiths">
       <div class="box--grey-light">
         <div class="flex-4-fiths gutters content-padding--public">
-          <% t('about_project').each do |item| %>
+          <% t('resources').each do |item| %>
             <div class="block--about">
               <h2><%= item[:title] %></h2>
 
