Alter text as requested

--- a/app/views/global_admin/_nav.html.erb
+++ b/app/views/global_admin/_nav.html.erb
@@ -25,6 +25,6 @@
     <%= link_to "Support", admin_support_path, title: 'Support', class: 'nav__a' + current_class?(admin_support_path) %>
   </li>
   <li class="nav__li">
-    <%= link_to "About Go-Fox", admin_resources_path, title: 'Resources', class: 'nav__a' + current_class?(admin_resources_path) %>
+    <%= link_to "Resources", admin_resources_path, title: 'Resources', class: 'nav__a' + current_class?(admin_resources_path) %>
   </li>
 </ul>
