Add link to go-fox analysis site on survey responses page

--- a/app/views/responses/index.html.erb
+++ b/app/views/responses/index.html.erb
@@ -24,6 +24,10 @@
     <chart-results :data="<%= @results_chart_data %> "></chart-results>
   </div>
 
+  <%= link_to "https://futureofconservation.shinyapps.io/go-fox/", title: 'GO-FOX Analysis site', class: 'button--large-chevrons flex flex-v-center' do %>
+    GO-FOX Analysis site: <i class="material-icons">chevron_right</i><i class="material-icons">chevron_right</i>
+  <% end %>
+
   <ul class="table--results ul-unstyled">
     <li class="table__header flex">
       <p class="table__heading table__heading-1">ID</p>
