--- a/app/views/responses/index.html.erb
+++ b/app/views/responses/index.html.erb
@@ -24,6 +24,14 @@
     <chart-results :data="<%= @results_chart_data %> "></chart-results>
   </div>
 
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
+    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat 
+    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+
   <%= link_to "https://futureofconservation.shinyapps.io/go-fox/", title: 'GO-FOX Analysis site', class: 'button--large-chevrons flex flex-v-center' do %>
     GO-FOX Analysis site: <i class="material-icons">chevron_right</i><i class="material-icons">chevron_right</i>
   <% end %>
