--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -46,10 +46,10 @@
     <%= form.text_field :name, id: :survey_name %>
   </div>
 
-  <div class="field">
+  <!---<div class="field">
     <%= form.label :description %>
     <%= form.text_area :description, id: :survey_description %>
-  </div>
+  </div>--->
 
   <% if current_user.admin? %>
     <%= render partial: 'organisational_fields', locals: { survey: survey, form: form } %>
