Change previous survey id text for educational users

--- a/app/views/surveys/_educational_fields.html.erb
+++ b/app/views/surveys/_educational_fields.html.erb
@@ -1,7 +1,7 @@
 <% if survey.id.nil? %>
   <div class="field">
     <label for="">
-      Previous survey ID.
+      If you wish to compare results with a previous survey you have conducted, please enter the Survey ID for the previous survey here.
     </label>
     <p>
       Lorem ipsum.
