Add a label to the language field for educational user new survey creation

--- a/app/views/surveys/_educational_fields.html.erb
+++ b/app/views/surveys/_educational_fields.html.erb
@@ -10,6 +10,9 @@
   </div>
 
   <div class="field">
+    <label for="">
+      Please choose the language in which your respondents will take the survey. Please note that the GO-FOX interface is only available in English at present.
+    </label>
     <%= render partial: 'form_elements/collection_buttons',
       locals: {
         form: form,
